--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
-"dependencies": {
-  "swr": "^2.2.0",
-  "axios": "^1.6.0",
-  "next": "latest",
-  "react": "latest",
-  "react-dom": "latest"
-},
-"devDependencies": {
-  "tailwindcss": "^3.3.0",
-  "postcss": "^8.4.0",
-  "autoprefixer": "^10.4.0"
+{
+  "name": "eth-scalping-dashboard",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "13.4.19",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "swr": "^2.2.0",
+    "axios": "^1.6.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
+  }
 }
