--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.2.0",
-    "axios": "^1.6.0"
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@types/react": "^18.2.0",
+    "@types/node": "^18.17.0"
   }
 }
