--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "swr": "^2.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2",
+    "@types/node": "^18.17.0",
     "@types/react": "^18.2.0",
-    "@types/node": "^18.17.0"
+    "typescript": "^5.2.2",
+    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.24",
+    "autoprefixer": "^10.4.14"
   }
 }
