--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "gateapi-nodejs": "^4.27.1"
   },
   "devDependencies": {
     "@types/node": "^18.17.0",
