--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.0",
-    "gateapi-nodejs": "^4.27.1"
+    "@gateio/gateapi-nodejs": "^4.27.1"
   },
   "devDependencies": {
     "@types/node": "^18.17.0",
