--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.0",
-    "gate-api": "latest"
+    "gate-api": "latest",
+    "lightweight-charts": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^18.17.0",
