I have reverted the changes related to the indicator chart:
Removed the chart component usage and import from pages/index.tsx.
Deleted the components/IndicatorChart.tsx file.
Removed the lightweight-charts dependency from package.json.
Removed the historical_data_1m field from the SignalProps type in lib/types.ts.
Removed the historical_data_1m field from the API response in pages/api/signal.ts.
The application should now be back to the state before the chart was added, but with all the other improvements (dark theme, detailed scores, market context, etc.) still in place.

Please commit these changes and deploy to Vercel. Let me know if everything looks correct now, and if you still need assistance debugging the liquidation price or market context display.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.0",
-    "gate-api": "latest",
-    "lightweight-charts": "^4.1.3"
+    "gate-api": "latest"
   },
   "devDependencies": {
     "@types/node": "^18.17.0",
