I have completed the implementation of the historical signal viewing feature using Vercel KV:
Added the @vercel/kv dependency to package.json.
Modified the /api/signal route (pages/api/signal.ts) to save the generated signal data to Vercel KV on each successful run.
Created a new API route /api/history (pages/api/history.ts) to fetch the latest 100 signal records from Vercel KV.
Created a new page pages/history.tsx that fetches data from /api/history and displays it in a table format, styled for the dark theme.
Added a navigation link "查看历史 →" on the main page (pages/index.tsx) pointing to /history.
Important: This feature relies on the Vercel KV database you set up (Upstash Redis) and connected to your project. Data will start being saved from the next successful deployment onwards.

Please commit all the modified files (package.json, pages/api/signal.ts, pages/api/history.ts, pages/history.tsx, pages/index.tsx) and deploy to Vercel. After deployment, you should be able to navigate to the history page and see signal data accumulating over time.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.0",
-    "gate-api": "latest"
+    "gate-api": "latest",
+    "@vercel/kv": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.17.0",
